[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.13.0"
regex = "1.11.1"
anyhow = "1.0.93"
indoc = "2.0.5"
strum = { version = "0.26.3", features = ["derive"] }
hashbrown = "0.15.2"
scan_fmt = "0.2.6"
derive_more = { version = "1.0.0", features = ["display", "try_from"] }
automod = "1.0.14"
rayon = "1.11.0"
z3 = { version = "0.19.6", features = ["gh-release"] }
sscanf = "0.4.4"
